--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: Convert Jupyter Notebooks to Github Pages
+name: "Convert Jupyter Notebooks to Github Pages"
 description: Translate all Jupyter notebooks in the repository to Markdown and trigger publish
 inputs:
   show-cells:
